argocd/apps/ytdl/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f ytdl.yaml convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: ytdl
  name: ytdl
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ytdl
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f ytdl.yaml convert
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: ytdl
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: NotIn
                    values:
                      - marcus-server
      containers:
        - env:
            - name: ALLOW_CONFIG_MUTATIONS
              value: "true"
            - name: write_ytdl_config
              value: "true"
            - name: ytdl_allow_registration
              value: "false"
            - name: ytdl_mongodb_connection_string
              value: mongodb://ytdl-mongo-db:27017
            - name: ytdl_multi_user_mode
              value: "true"
            - name: ytdl_use_local_db
              value: "false"
          image: tzahi12345/youtubedl-material:latest@sha256:2f943d584711cb07c3535b518939fabb2ab90fdd7452d9a9938cd05378468ed9
          imagePullPolicy: IfNotPresent
          name: ytdl
          resources:
            limits:
              cpu: 100m
              memory: 500Mi
            requests:
              cpu: 25m
              memory: 200Mi
          ports:
            - containerPort: 17442
              protocol: TCP
          volumeMounts:
            - mountPath: /app/appdata
              name: appdata
            - mountPath: /app/audio
              name: audio
            - mountPath: /app/video
              name: video
            - mountPath: /app/subscriptions
              name: subscriptions
            - mountPath: /app/users
              name: users
          readinessProbe:
            httpGet:
              path: /
              port: 17442
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /
              port: 17442
            initialDelaySeconds: 300
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 10
      restartPolicy: Always
      volumes:
        - name: appdata
          persistentVolumeClaim:
            claimName: appdata
        - name: audio
          persistentVolumeClaim:
            claimName: audio
        - name: video
          persistentVolumeClaim:
            claimName: video
        - name: subscriptions
          persistentVolumeClaim:
            claimName: subscriptions
        - name: users
          persistentVolumeClaim:
            claimName: users
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f ytdl.yaml convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: ytdl-mongo-db
  name: ytdl-mongo-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ytdl-mongo-db
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        io.kompose.service: ytdl-mongo-db
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
      containers:
        - image: mongo:8.0.4@sha256:aaad67f2dca93148e5343c03210bcfc89a0107516a4756bfa018acd6579e5b18
          name: ytdl-mongo-db
          resources:
            limits:
              cpu: 100m
              memory: 500Mi
            requests:
              cpu: 25m
              memory: 200Mi
          volumeMounts:
            - mountPath: /data/db
              name: db
          startupProbe:
            tcpSocket:
              port: 27017
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
      restartPolicy: Always
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: db
